--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,23 @@ FodyWeavers.xsd
 /ComputerDatabase/ConsoleApp1/obj/Debug/net7.0/refint/ConsoleApp1.dll
 /ComputerDatabase/ConsoleApp1/obj/Debug/net7.0/ConsoleApp1.dll
 /ComputerDatabase/ConsoleApp1/obj/Debug/net7.0/ConsoleApp1.pdb
+/ComputerDatabase/ConsoleApp1/obj/project.assets.json
+/ComputerDatabase/Infrastructure/obj/Debug/net7.0/ref/Infrastructure.dll
+/ComputerDatabase/Infrastructure/obj/Debug/net7.0/refint/Infrastructure.dll
+/ComputerDatabase/Infrastructure/obj/Debug/net7.0/Infrastructure.assets.cache
+/ComputerDatabase/Infrastructure/obj/Debug/net7.0/Infrastructure.csproj.AssemblyReference.cache
+/ComputerDatabase/Infrastructure/obj/Debug/net7.0/Infrastructure.csproj.CoreCompileInputs.cache
+/ComputerDatabase/Infrastructure/obj/Debug/net7.0/Infrastructure.dll
+/ComputerDatabase/Infrastructure/obj/Debug/net7.0/Infrastructure.pdb
+/ComputerDatabase/Infrastructure/obj/Infrastructure.csproj.nuget.dgspec.json
+/ComputerDatabase/Infrastructure/obj/project.assets.json
+/ComputerDatabase/Infrastructure/obj/project.nuget.cache
+/ComputerDatabase/ComputerDatabase.sln
+/ComputerDatabase/.vs/ComputerDatabase/DesignTimeBuild/.dtbcache.v2
+/ComputerDatabase/ConsoleApp1/bin/Debug/net7.0/Infrastructure.dll
+/ComputerDatabase/ConsoleApp1/bin/Debug/net7.0/Infrastructure.pdb
+/ComputerDatabase/ConsoleApp1/obj/Debug/net7.0/apphost.exe
+/ComputerDatabase/ConsoleApp1/obj/project.nuget.cache
+/ComputerDatabase/Infrastructure/bin/Debug/net7.0/Infrastructure.deps.json
+/ComputerDatabase/Infrastructure/bin/Debug/net7.0/Infrastructure.dll
+/ComputerDatabase/Infrastructure/bin/Debug/net7.0/Infrastructure.pdb
